resolve grid alignment and row height issues in desktop view and challenge finished

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,11 +8,23 @@
     src: url(/assets/fonts/BeVietnamPro-Regular.ttf);
     font-display: swap;
 }
+.author-info {
+        font-size: 14px;
+        text-align: center;
+        margin-top: 16px;
+        color: black;
+      }
+
+      .author-info a {
+        color: red;
+        text-decoration: underline;
+      }
 body{
     background: url(/assets/img/background.svg) no-repeat;
     background-size: cover;
     font-family: 'be vietnam pro', sans-serif;
     font-size: 16px;
+    color: #FFFFFF;
 }
 header{
     display: flex;
@@ -40,16 +52,35 @@ main{
     align-items: center;
     margin: 30px;
     margin-bottom: 50px;
+    gap: 20px;
 }
+    .contact-description h1{
+        font-size: 2rem;
+    }
+    .contact-description h2{
+        font-size: 1rem;
+    }
+    @media (min-width:1024px) {
+        .contact-description h1{
+        font-size: 4rem;
+        }
+        .contact-description h2{
+        font-size: 2rem;
+        }
+    }
 
 /* Contact Form */
-
+input:focus, select:focus, textarea:focus{
+    outline-color: #4d90fe;
+}
 .contact-form-container{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 90%;
+    border-radius: 20px;
+    background-color: #FFFFFF33;
 }
 
 .contact-form{
@@ -57,61 +88,85 @@ main{
     flex-direction: column;
     width: 100%;
     padding: 15px;
-    gap: 10px;
-    border: 1px solid black;
+    gap: 20px;
+    color:  #ebebe3;
 }
 @media (min-width:1024px) {
     .contact-form{
         display: grid;
         padding: 25px;
-        gap: 25px;
+        gap: 20px;
         grid-template-columns: repeat(2 , 1fr);
-        grid-template-rows: repeat(4 , 1fr);
     }
     .contact-form-container{
         width: 70%;
     }
 }
-.form-name-container{
+.contact-form input{
+    color: #111729;
+    border-radius: 15px;
+    border: none;
+    padding: 15px;
+    font-size: 1rem;
+    font-weight: bold;
+    height: 60px;
+}
+.contact-form label{
+    margin-bottom: 5px;
+    font-size: 0.875rem;
+}
+.contact-form select{
+    color: #111729;
+    border-radius: 15px;
+    border: none;
+    padding: 15px;
+    font-size: 1rem;
+    font-weight: bold;
+    height: 60px;
+    appearance: none;
+    background-image: url(/assets/img/Expand_down.svg);
+    background-repeat: no-repeat;
+    background-position: right center;
+}
+select:hover{
+    cursor: pointer;
+}
+.form-item-container{
     display: flex;
     flex-direction: column;
 }
-    .form-name-container label{
-        margin-bottom: 5px;
-    }
-.form-company-email-container{
-    display: flex;
-    flex-direction: column;
-}
-    .form-company-email-container label{
-        margin-bottom: 5px;
-    }
-.form-company-size-container{
-    display: flex;
-    flex-direction: column;
-}
-    .form-company-size-container label{
-        margin-bottom: 5px;
-    }
-.form-subject-container{
-    display: flex;
-    flex-direction: column;
-}
-    .form-subject-container label{
-        margin-bottom: 5px;
-    }
 .form-message-container{
     display: flex;
     flex-direction: column;
     grid-column: span 2;
 }
-    .form-message-container label{
-        margin-bottom: 5px;
-    }
-    .form-message-area{
-        width: 100%;
-        height: 100px;
-    }
+.contact-form textarea{
+    height: 150px;
+    color: #111729;
+    border-radius: 15px;
+    border: none;
+    padding: 15px;
+    font-size: 1rem;
+    font-weight: bold;
+}
 .form-send-button{
     grid-column: span 2;
+    height: 60px;
+    color: #4036A9;
+    background-color: #FFFFFF;
+    border-radius: 15px;
+    border: none;
+    padding: 15px;
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+.form-send-button:hover{
+    background-color: #4036A9;
+    color: #FFFFFF;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.form-send-button:active{
+    transition:  0.2s;
+    transform: scale(0.9);
 }
